# soon-staking

./: Anchor.toml  invoke.js  invoke2.js  package-lock.json  package.json
Frontend/vesto/: package-lock.json  package.json
Frontend/vesto/.next/: react-loadable-manifest.json  trace
Frontend/vesto/.next/cache/: .rscinfo
Frontend/vesto/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
Frontend/vesto/.next/server/app/: page.js  page_client-reference-manifest.js
Frontend/vesto/.next/server/vendor-chunks/: @coral-xyz.js  @internationalized.js  @noble.js  @project-serum.js  @react-aria.js  @react-stately.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @wallet-standard.js  base-x.js  base64-js.js  bigint-buffer.js  bindings.js  bn.js.js  borsh.js  bs58.js  buffer-layout.js  bufferutil.js  clsx.js  compute-scroll-into-view.js  dijkstrajs.js  dot-case.js  eventemitter3.js  file-uri-to-path.js  framer-motion.js  jayson.js  js-base64.js  js-sha256.js  lodash.debounce.js  lower-case.js  next.js  no-case.js  node-fetch.js  node-gyp-build.js  pako.js  rpc-websockets.js  safe-buffer.js  scroll-into-view-if-needed.js  (+12 more)
Frontend/vesto/app/: globals.css  layout.tsx  page.tsx
Frontend/vesto/components/: AppwalletProvider.tsx  Header.tsx  vesting.tsx
Frontend/vesto/consts/: abi.json
Frontend/vesto/contexts/: vestingContext.tsx
programs/soon-staking/: Cargo.toml
programs/soon-staking/src/: lib.rs
tests/: soon-staking.ts
(+43 files in other folders)
